# stereovision

./: Calibration.yml  Vision_3D.pro  Vision_3D.pro.user.e9c7f90  dynamicframe.cpp  dynamicframe.h  imageprocessor.cpp  imageprocessor.h  main.cpp  mainwindow.cpp  mainwindow.h  movablebutton.cpp  movablebutton.h  robot_controller.cpp  robot_controller.h  selectionframe.cpp  selectionframe.h
simulator/: simulator.csproj  simulator.sln
simulator/Assets/: Tree.prefab
simulator/Assets/Scripts/: CameraController.cs  CameraController2.cs  PlayerController.cs  player.cs
simulator/Assets/SoldiersPack/ArmyOne/Materials/: Army 01-Body_Suit_Army.mat  Army 01-Body_Suit_Army_BackPack_BackPack.mat  Army 01-Body_Suit_Army_Belt_Belt.mat  Army 01-Body_Suit_Army_Bottle_Gourd.mat  Army 01-Body_Suit_Army_PocketFront_PocketFront.mat  Army 01-Body_Suit_Army_PocketSide_PocketSide.mat  Army 01-EyeL_EyeballL_EyeballL.mat  Army 01-EyeR_EyeballR_EyeballR.mat  Army 01-Head_Hair_ArmyHelmet.mat
simulator/Assets/_scenes/: Robot.unity
simulator/Assets/animation/: player.controller
stereo_flycap/: .gitmodules  CMakeLists.txt  Sources.cmake  autonomous_car.cpp  camera.cpp  camera.h  car_controler.cpp  car_controler.h  controler.h  fake_controler.cpp  fake_controler.h  list_guid.cpp  notes  stereo_camera.cpp  stereo_camera.h  test_car.cpp  test_mono.cpp  test_stereo.cpp  traj_controler.cpp  traj_controler.h
